@@ -2,7 +2,7 @@ EXTRA_DIST = pam_krb5.spec TODO
 
 CONFIGURE_DEPENDENCIES = $(top_srcdir)/pam_krb5.spec
 
-SUBDIRS = src pam.d tests
+SUBDIRS = src tests
 
 VERSION=$(shell rpm -q --specfile $(top_srcdir)/pam_krb5.spec --qf '%{version}\n' | head -n1)
 RELEASE=$(shell rpm -q --specfile $(top_srcdir)/pam_krb5.spec --qf '%{release}\n' | head -n1)
